--- a/index.html
+++ b/index.html
@@ -6,10 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OAD</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 </head>
 
 <body>
-    <h1>OAD - Oportunidade e Acesso Digital</h1>
+    <nav>
+        <ul>
+            <li><a href="">Início</a></li>
+            <li><a href="">Sobre</a></li>
+            <li><a href="">Parcerias</a></li>
+            <li><a href="">Mapa da comunidade</a></li>
+            <li><a href="">Doações</a></li>
+            <li><a href="">Contatos</a></li>
+            <li><img src="" alt="Logo"></li>
+        </ul>
+    </nav>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
