--- a/index.html
+++ b/index.html
@@ -10,18 +10,61 @@
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li><a href="">Início</a></li>
-            <li><a href="">Sobre</a></li>
-            <li><a href="">Parcerias</a></li>
-            <li><a href="">Mapa da comunidade</a></li>
-            <li><a href="">Doações</a></li>
-            <li><a href="">Contatos</a></li>
-            <li><img src="" alt="Logo"></li>
-        </ul>
+    <nav id="barra_navegacao">
+        <li><a href="">Início</a></li>
+        <li><a href="">Sobre</a></li>
+        <li><a href="">Parcerias</a></li>
+        <li><a href="">Ecossistema OAD</a></li>
+        <li><a href="">Doações</a></li>
+        <li><a href="">Contatos</a></li>
+        <li><img src="img/logo_preta.png" alt="Logo"></li>
     </nav>
+
+
     <main>
+        <!-- =============================================================================
+         INICIO
+         ================================================================================= -->
+
+        <div id="container_inicio"><div id="foto_inicio">
+            <img src="img/logo-branca-sem-fundo.png" alt="Logo" id="logo">
+            <h1 id="slogan">Mais que sites <br>criamos <strong>oportunidades</strong></h1>
+        </div></div>
+
+
+        <!-- =============================================================================
+        SOBRE 
+        ==================================================================================-->
+        <h1 id="historia">História</h1>
+
+        <p>A OAD (Oportunidade e Acesso Digital) foi fundada em 2015 por Adriana Alencar, profissional da área de
+            tecnologia e entusiasta da inclusão digital. A iniciativa nasceu da constatação de Adriana sobre as
+            dificuldades que microempreendedores enfrentavam para conquistar visibilidade online e utilizar a internet como ferramenta de crescimento. <br><br>
+
+            Nos primeiros anos, a OAD concentrou esforços na construção de confiança na comunidade local por meio de
+            portfólios, histórias de impacto e atuação voluntária de jovens profissionais. Entre 2019 e 2020, a ONG
+            iniciou um processo de profissionalização: passou a produzir relatórios de impacto, realizar workshops e
+            expandir sua atuação geográfica. <br><br>
+
+            Durante a pandemia, a demanda por digitalização cresceu substancialmente. A OAD passou a oferecer
+            atendimento intensificado a microempreendedores que precisavam migrar para o ambiente digital, consolidando
+            sua relevância em escala nacional. <br><br>
+
+            A partir de 2021, a organização firmou parcerias estratégicas com instituições como o Instituto da
+            Oportunidade Social (IOS), a Recode e a AMEI-B, que reforçaram programas de capacitação e encaminhamento de
+            beneficiários. Em 2023, a parceria com a Gerando Falcões ampliou o alcance para favelas e periferias. Em
+            2024, a TOTVS aportou infraestrutura e mentorias, elevando a qualidade técnica dos serviços, e a Dell passou
+            a atuar como patrocinadora institucional, contribuindo com equipamentos, suporte tecnológico e programas de
+            inclusão digital. <br><br>
+
+            Entre 2015 e 2025, a OAD evoluiu de um projeto local para uma ONG de referência nacional em inclusão
+            digital, mantendo foco em impacto mensurável, transparência e replicabilidade do seu modelo. </p>
+
+
+        <!--======================================================================================== 
+        SOBRE ADICIONAL
+         ========================================================================================== -->
+
 
     </main>
     <footer>
