--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <!-- Menu de navegação para desktop -->
             <nav class="nav-desktop" id="nav-desktop">
-                <a href="#inicio" class="nav-link">Início</a>
+                <a href="#inicio1" class="nav-link">Início</a>
                 <a href="#sobre" class="nav-link">Sobre</a>
                 <a href="#parcerias" class="nav-link">Parcerias</a>
                 <a href="#mapa" class="nav-link">Mapa</a>
@@ -47,7 +47,7 @@
 
         <!-- Menu mobile (aparece quando clica no hambúrguer) -->
         <nav class="nav-mobile" id="nav-mobile">
-            <a href="#inicio" class="nav-link-mobile">Início</a>
+            <a href="#inicio1" class="nav-link-mobile">Início</a>
             <a href="#sobre" class="nav-link-mobile">Sobre</a>
             <a href="#parcerias" class="nav-link-mobile">Parcerias</a>
             <a href="#mapa" class="nav-link-mobile">Mapa</a>
@@ -65,7 +65,7 @@
          SEÇÃO SLOGAN
          Destaque para o slogan da ONG
     ======================================== -->
-    <section class="slogan-section" >
+    <section class="slogan-section" id="inicio1">
         <div id="container_slogan-content">
             <div data-aos="fade-right" data-aos-duration="2000"><img src="img/logo-branca-sem-fundo.png" alt="logo" id="logo_branca"></div>
             <h2 id="slogan" data-aos="fade-right" data-aos-duration="2000">Mais que sites <br>criamos <strong >Oportunidades</strong></h2>
