--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
             <div class="about-grid" data-aos="zoom-in-up" data-aos-duration="2000">
                 <!-- Coluna da imagem -->
                 <div class="about-image-wrapper">
-                    <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?w=800"
-                        alt="Educação Digital OAD" class="about-image" id="historia_oad">
+                    <img src="img/adriana.jpg"
+                        alt="Adriana Alencar" class="about-image" id="historia_oad">
 
                 </div>
 
@@ -384,7 +384,7 @@
 
                 </div>
                 <div class="partner-card">
-                    <img src="img/logo_preta.png" alt="Parceiros da OAD" class="fotos_patrocinadores">
+                    <img src="img/recode.png" alt="Parceiros da OAD" class="fotos_patrocinadores">
                 </div>
             </div>
 
@@ -411,7 +411,7 @@
 
                 </div>
                 <div class="partner-card">
-                    <img src="img/logo_preta.png" alt="Parceiros da OAD" class="fotos_patrocinadores">
+                    <img src="img/recode.png" alt="Parceiros da OAD" class="fotos_patrocinadores">
                 </div>
             </div>
             
