--- a/pagamento.html
+++ b/pagamento.html
@@ -583,7 +583,7 @@
                     <!-- Mensagem de impacto -->
                     <div class="impact-message">
                         <p>
-                            <strong>Você sabia?</strong> Com R$ <span id="impact-amount">50</span> você pode
+                            <strong>Você sabia?</strong> Com R$20,00 você pode
                             ajudar a capacitar uma pessoa em nossos cursos de tecnologia,
                             abrindo portas para um futuro melhor.
                         </p>
