--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
                             <span class="accordion-icon">+</span>
                         </button>
                         <div class="accordion-content" id="ambiental">
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, laborum doloremque!
-                                Libero maiores eaque corrupti recusandae tempore vitae ipsa! Facere veritatis fugiat
-                                dolore nisi vel commodi iusto illo, omnis asperiores.</p>
+                            <p><li>Praticamos o uso eficiente de energia e adotamos ferramentas digitais que reduzem desperdícios;</li>
+                            <li>Priorizamos soluções tecnológicas sustentáveis, diminuindo a necessidade de materiais físicos e impressões;</li>
+                            <li>Incentivamos práticas internas voltadas ao cuidado com o meio ambiente.</li></p>
                         </div>
                     </div>
 
@@ -194,9 +194,9 @@
                             <span class="accordion-icon">+</span>
                         </button>
                         <div class="accordion-content" id="social">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid praesentium nemo quos
-                                architecto commodi eveniet facere, dolore ipsa dolorem consequuntur, illum eaque ipsam
-                                ea reiciendis quisquam doloribus minus voluptates? Animi..</p>
+                            <p><li>Mantemos um ambiente de trabalho colaborativo, seguro e inclusivo;</li>
+                            <li>Valorizamos parcerias honestas e um relacionamento transparente com as pessoas atendidas;</li>
+                            <li>Desenvolvemos projetos que contribuem para o crescimento profissional e social das pessoas envolvidas.</li></p>
                         </div>
                     </div>
 
@@ -207,9 +207,9 @@
                             <span class="accordion-icon">+</span>
                         </button>
                         <div class="accordion-content" id="governanca">
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod itaque iste natus aliquam,
-                                id tempore, blanditiis non repellat debitis magni quibusdam assumenda adipisci ad? Ipsa
-                                at nihil consectetur asperiores repudiandae.</p>
+                            <p><li>Atuamos com ética, responsabilidade e clareza em todos os processos;</li>
+                            <li>Seguimos políticas internas que garantem organização, eficiência e tomada de decisões consciente;</li>
+                            <li>Priorizamos a segurança dos dados, o cumprimento das normas e a prestação de contas.</li></p>
                         </div>
                     </div>
                 </div>
